site/public/css/gradeable-notebook.css
/* stylelint-disable selector-type-no-unknown, declaration-block-no-redundant-longhand-properties */
.notebook h1,
.notebook h2,
.notebook h3,
.notebook h4,
.notebook h5,
.notebook h6,
.notebook h7 {
    margin-top: 2rem;
    margin-bottom: 0.3rem;
    margin-left: 0;
    margin-right: 0;
}
/* stylelint-enable selector-type-no-unknown, declaration-block-no-redundant-longhand-properties */

.notebook > div {
    margin-top: 20px;
}

/* Push recent and clear buttons down a little bit and shrink them slightly */
.notebook .sa-clear-reset,
.notebook .codebox-clear-reset,
.notebook .mc-recent,
.notebook .mc-clear {
    margin-top: 7px;
    padding: 3px 6px;
    font-size: 80%;
}

/* Set default font for short_answer boxes */
.notebook textarea,
.notebook input[type="text"] {
    font-family: monospace;
}

/* Display notebook multiple choice descriptions on same line as radio button or checkbox */

/* Input field is the first child */
.mc > label > :nth-child(2) {
    display: inline;
}

/* Style the color of notebook feedback messages */
.notebook .feedback-msg-failure {
    color: var(--badge-backgroud-red);
}

.notebook .feedback-msg-warning {
    color: var(--standard-vibrant-orange);
}

.notebook .feedback-msg-info {
    color: var(--standard-deep-blue);
}

.notebook .feedback-msg-success {
    color: var(--standard-dark-green);
}

.sa-box {
    display: block;
}

textarea.sa-box {
    width: 60em;
    height: 100%;
    min-height: 110px;
}

.mc label {
    float: left;
    clear: both;
    display: flex;
    align-items: center;
}

.mc input[type="checkbox"],
.mc input[type="radio"] {
    margin: 5px;
}

/* Add some margin for informational content that is inside <p> tags */
.notebook p {
    margin-top: 12px;
    margin-bottom: 12px;
}

/* Clear that margin for <p> tags that are part of a multiple choice input */
.notebook fieldset p {
    margin-top: 0;
    margin-bottom: 0;
}

.notebook fieldset label p {
    margin-top: 6px;
    margin-bottom: 6px;
}

img {
    margin-top: 10px;
}

/* stylelint-disable-next-line selector-class-pattern */
.CodeMirror {
    /* stylelint-disable-next-line declaration-no-important */
    background-color: var(--standard-input-background) !important;
    /* stylelint-disable-next-line declaration-no-important */
    border: 1px solid var(--standard-light-gray) !important;
    /* stylelint-disable-next-line declaration-no-important */
    border-radius: 4px !important;
    /* stylelint-disable-next-line declaration-no-important */
    vertical-align: middle !important;
}

/* stylelint-disable-next-line selector-class-pattern */
.small-mirror .CodeMirror {
    resize: horizontal;
    min-width: 150px;
    max-width: 50em;
}

/* stylelint-disable-next-line selector-class-pattern */
.large-mirror .CodeMirror {
    resize: vertical;
    min-height: 30px;
    max-height: 80vh;
}

/* Fixes Safari spacing issue */
.notebook fieldset legend {
    -webkit-margin-top-collapse: separate;
}

/* Not set for images as we want to allow them to be wider than 700px */
/* stylelint-disable selector-class-pattern */
.notebook .multiple_choice,
.notebook .short_answer,
.notebook .markdown {
    max-width: 700px;
}

/* stylelint-enable selector-class-pattern */
@media print {
    @page {
        size: auto;
        margin: 0;
        /* stylelint-disable-next-line at-rule-descriptor-no-unknown */
        break-inside: avoid;
    }

    gradeable-time-remaining-text {
        display: none;
    }

    .content {
        padding: 0;
    }

    .content:not(#gradeable-submission-cont) {
        display: none;
        margin: 0;
        padding: 0;
    }

    .submit-gradeable {
        display: none;
    }

    aside,
    .flex-row.shadow {
        display: none;
    }

    #printing {
        display: none;
    }

    #gradeable-time-remaining-text {
        display: none;
    }

    h1 {
        font-size: 25px;
    }

    h2 {
        font-size: 21px;
    }

    p {
        font-size: 16px;
    }

    performance-warning-system-message-text {
        display: none;
    }

    .mc-clear,
    .mc-recent,
    .codebox-clear-reset {
        display: none;
    }
}

